# lexi-growth

./: .gitignore  README.md  requirements.txt
client/lexi-front/: README.md  package-lock.json  package.json
lexi-front/: package-lock.json  package.json
lexi-front/src/: App.js  setupProxy.js
lexi-server/: .env.example  .gitignore  README.md  pyproject.toml  run.py
lexi-server/lexi_auth/adapter/repository/: user_repository.py
lexi-server/lexi_auth/application/: user_management.py
lexi-server/lexi_auth/core/: user.py
lexi-server/lexi_growth/adapter/: routes.py
lexi-server/lexi_growth/application/: auto_text_extractor.py  known_list_context.py  lexi_flow_handler.py
lexi-server/lexi_growth/core/: lexi_flow.py  word_item.py
lexi-server/lexi_growth/extension/: word_difficulty_filler.py
lexi-server/lexi_growth/utils/: file_util.py  word_difficulty_util.py
lexi-server/lexi_growth/utils/txtractor/: youtube_subtitles_extractor.py
lexi_growth/: __main__.py  config.py  main.py
lexi_growth/application/: known_list_context.py
lexi_growth/core/: lexi_flow.py  word_counter.py  word_filter.py
lexi_growth/counters/: frequency_counter.py
lexi_growth/extension/: word_definition_filler.py  word_frequency_counter.py  word_known_filter.py  word_translation_filler.py
lexi_growth/extracters/: ass_text_extracter.py  epub_text_extracter.py  extract_distributor.py
lexi_growth/filters/: known_word_filter.py
lexi_growth/handlers/: file_handler.py  filter_handler.py  (+1 more)
server/: .env.example  pyproject.toml  requirements.txt
tests/: .env.test  conftest.py
(+43 files in other folders)
